--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+// Sorry, this is draft version.
+// The final version will be submitted today or before final starts.
+
 Usage: main.py [options]
 
 Options:
