--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Author: Yohei YASUKAWA
 Date: 2010/05/03
-Mail: yasulab@gmail.com
+Contact: https://github.com/yasulab
 
 Dir Structure:
 - ver-0: unigram babbler
